test(grid): add sizing tests & table spec classes

--- a/packages/html/src/grid/tests/grid-header-new-rendering.html
+++ b/packages/html/src/grid/tests/grid-header-new-rendering.html
@@ -10,34 +10,34 @@
 <body id="app" class="k-body">
     <div id="test-area" class="k-d-grid k-grid-cols-2">
 
-        <kendo-grid class="k-widget k-grid">
+        <kendo-grid class="k-grid k-grid-md">
             <div class="k-grid-aria-root">
                 <div class="k-grid-header">
                     <div class="k-grid-header-wrap">
-                        <table>
+                        <table class="k-table k-table-md">
                             <colgroup>
                                 <col style="width: 100px;" />
                                 <col />
                                 <col />
                             </colgroup>
-                            <thead>
-                                <tr>
-                                    <th class="k-header k-grid-draggable-header" rowspan="1" colspan="1">
-                                        <span  class="k-cell-inner">
-                                            <span  class="k-link">
-                                                <span  class="k-column-title">
+                            <thead class="k-table-thead">
+                                <tr class="k-table-row">
+                                    <th class="k-table-th k-header k-grid-draggable-header" rowspan="1" colspan="1">
+                                        <span class="k-cell-inner">
+                                            <span class="k-link">
+                                                <span class="k-column-title">
                                                     ProductName
                                                 </span>
                                                 <span class="k-icon k-i-sort-asc-small"></span>
                                                 <span class="k-sort-order">3</span>
                                             </span>
-                                            <span  class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
+                                            <span class="k-sort-status"  style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                         </span>
                                     </th>
-                                    <th class="k-header k-grid-draggable-header k-justify-content-end" rowspan="1" colspan="1">
-                                        <span  class="k-cell-inner">
-                                            <span  class="k-link">
-                                                <span  class="k-column-title">
+                                    <th class="k-table-th k-header k-grid-draggable-header k-justify-content-end" rowspan="1" colspan="1">
+                                        <span class="k-cell-inner">
+                                            <span class="k-link">
+                                                <span class="k-column-title">
                                                 Discontinued
                                                 </span>
                                                 <span class="k-icon k-i-sort-asc-small"></span>
@@ -46,7 +46,7 @@
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                         </span>
                                     </th>
-                                    <th class="k-header k-grid-draggable-header" rowspan="1" colspan="1">
+                                    <th class="k-table-th k-header k-grid-draggable-header" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">
@@ -67,19 +67,19 @@
         </kendo-grid>
 
 
-        <kendo-grid class="k-widget k-grid">
+        <kendo-grid class="k-grid k-grid-md">
             <div class="k-grid-aria-root">
                 <div class="k-grid-header">
                     <div class="k-grid-header-wrap">
-                        <table>
+                        <table class="k-table k-table-md">
                             <colgroup>
                                 <col style="width: 100px;" />
                                 <col />
                                 <col />
                             </colgroup>
-                            <thead>
-                                <tr>
-                                    <th class="k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
+                            <thead class="k-table-thead">
+                                <tr class="k-table-row">
+                                    <th class="k-table-th k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">ProductName</span>
@@ -92,7 +92,7 @@
                                             </kendo-grid-filter-menu>
                                         </span>
                                     </th>
-                                    <th class="k-header k-filterable k-grid-draggable-header k-justify-content-end" rowspan="1" colspan="1">
+                                    <th class="k-table-th k-header k-filterable k-grid-draggable-header k-justify-content-end" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">Discontinued</span>
@@ -105,12 +105,12 @@
                                             </kendo-grid-filter-menu>
                                         </span>
                                     </th>
-                                    <th class="k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
+                                    <th class="k-table-th k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">UnitsInStockUnitsInStockUnitsInStockvvvv</span>
                                                 <span class="k-icon k-i-sort-asc-small"></span>
-                                                <span  class="k-sort-order">3</span>
+                                                <span class="k-sort-order">3</span>
                                             </span>
                                             <span class="k-sort-status" style="position: absolute; left: -10000px;">Sorted Ascending</span>
                                             <kendo-grid-filter-menu>
@@ -128,19 +128,19 @@
             </div>
         </kendo-grid>
 
-        <kendo-grid class="k-widget k-grid">
+        <kendo-grid class="k-grid k-grid-md">
             <div class="k-grid-aria-root">
                 <div class="k-grid-header">
                     <div class="k-grid-header-wrap">
-                        <table>
+                        <table class="k-table k-table-md">
                             <colgroup>
                                 <col style="width: 100px;" />
                                 <col />
                                 <col />
                             </colgroup>
-                            <thead>
-                                <tr>
-                                    <th class="k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
+                            <thead class="k-table-thead">
+                                <tr class="k-table-row">
+                                    <th class="k-table-th k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">
@@ -157,7 +157,7 @@
                                             </kendo-grid-column-menu>
                                         </span>
                                     </th>
-                                    <th class="k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
+                                    <th class="k-table-th k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">Discontinued Discontinued Discontinued
@@ -174,7 +174,7 @@
                                             </kendo-grid-column-menu>
                                         </span>
                                     </th>
-                                    <th class="k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
+                                    <th class="k-table-th k-header k-filterable k-grid-draggable-header" rowspan="1" colspan="1">
                                         <span class="k-cell-inner">
                                             <span class="k-link">
                                                 <span class="k-column-title">UnitsInStock
@@ -191,8 +191,8 @@
                                         </span>
                                     </th>
                                 </tr>
-                                <tr class="k-filter-row">
-                                    <td>
+                                <tr class="k-table-row k-filter-row">
+                                    <td class="k-table-td">
                                         <kendo-grid-string-filter-cell class="k-filtercell">
                                             <kendo-grid-filter-wrapper-cell class="k-filtercell-wrapper">
                                                 <input class="ng-pristine ng-valid k-textbox k-input k-input-md k-rounded-md k-input-solid ng-touched">
@@ -203,7 +203,7 @@
                                             </kendo-grid-filter-wrapper-cell>
                                         </kendo-grid-string-filter-cell>
                                         </td>
-                                    <td>
+                                    <td class="k-table-td">
                                         <kendo-grid-string-filter-cell class="k-filtercell">
                                             <kendo-grid-filter-wrapper-cell class="k-filtercell-wrapper">
                                                 <input class="ng-pristine ng-valid k-textbox k-input k-input-md k-rounded-md k-input-solid ng-touched">
@@ -214,7 +214,7 @@
                                             </kendo-grid-filter-wrapper-cell>
                                         </kendo-grid-string-filter-cell>
                                     </td>
-                                    <td>
+                                    <td class="k-table-td">
                                         <kendo-grid-string-filter-cell class="k-filtercell">
                                             <kendo-grid-filter-wrapper-cell class="k-filtercell-wrapper">
                                                 <input class="ng-pristine ng-valid k-textbox k-input k-input-md k-rounded-md k-input-solid ng-touched">
