--- a/tests/grid/grid-angular-sticky-rows-and-cols.html
+++ b/tests/grid/grid-angular-sticky-rows-and-cols.html
@@ -44,25 +44,25 @@
                                         <col>
                                     </colgroup>
                                     <tbody>
-                                        <tr class="k-grid-row-sticky">
+                                        <tr class="k-table-row k-grid-row-sticky">
                                             <td colspan="1">sticky row</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-alt">
+                                        <tr class=class="k-table-row k-table-row-alt k-grid-row-sticky  k-alt">
                                             <td colspan="1">sticky row: alt</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky">
+                                        <tr class="k-table-row k-grid-row-sticky">
                                             <td colspan="1">sticky row</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky k-selected">sticky row and col: selected</td>
                                             <td colspan="1">sticky row</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-alt">
+                                        <tr class=class="k-table-row k-table-row-alt k-grid-row-sticky  k-alt">
                                             <td colspan="1">sticky row: alt</td>
                                             <td class="k-grid-content-sticky">sticky row and col</td>
                                             <td class="k-grid-content-sticky k-selected">sticky row and col: alt selected cell</td>
@@ -228,7 +228,7 @@
                                             <td class="k-grid-content-sticky">Beverages</td>
                                             <td colspan="1">18</td>
                                         </tr>
-                                        <tr class="k-grid-row-sticky k-alt">
+                                        <tr class=class="k-table-row k-table-row-alt k-grid-row-sticky  k-alt">
                                             <td class="k-grid-content-sticky" colspan="1">2</td>
                                             <td colspan="1">Chang</td>
                                             <td class="k-grid-content-sticky" colspan="1">Beverages</td>
