test(toolbar): use toolbar html helper in visual tests

--- a/packages/html/src/grid/tests/grid-angular-sticky-rows-and-cols.html
+++ b/packages/html/src/grid/tests/grid-angular-sticky-rows-and-cols.html
@@ -228,7 +228,7 @@
 
         <section class="col-2">
             <kendo-grid dir="ltr" class="k-widget k-grid">
-                <kendo-grid-toolbar position="top" class="k-toolbar k-grid-toolbar">
+                <kendo-grid-toolbar position="top" class="k-toolbar k-toolbar-md k-grid-toolbar">
                     <button role="button" class="k-button k-grid-save-command k-button-md k-rounded-md k-button-solid-base k-button-solid" aria-disabled="false" dir="ltr" tabindex="-1"><span class="k-button-text">Add new</span></button>
                 </kendo-grid-toolbar>
                 <div class="k-grid-aria-root">
