test(treelist): add table spec classes to grid

--- a/tests/treelist/treelist-aggregates.html
+++ b/tests/treelist/treelist-aggregates.html
@@ -211,8 +211,8 @@
                                             <td colspan="1">Chief Product Officer</td>
                                             <td colspan="1">4/22/2019</td>
                                         </tr>
-                                        <tr class="k-footer">
-                                            <td>
+                                        <tr class="k-table-row k-footer">
+                                            <td class="k-table-td">
                                                 <span class="k-icon k-i-none"></span>
                                                 <span class="k-icon k-i-none"></span>42 employee(s)
                                             </td>
