chore(grid): add td selector for grid cells

--- a/tests/grid/grid.html
+++ b/tests/grid/grid.html
@@ -286,14 +286,14 @@
                         </colgroup>
                         <tbody class="k-table-tbody">
                             <tr class="k-table-row k-master-row">
-                                <td class="k-drag-cell">
+                                <td class="k-table-td k-drag-cell">
                                     <span class="k-icon k-i-reorder"></span>
                                 </td>
                                 <td class="k-table-td">Alfreds Futterkiste</td>
                                 <td class="k-table-td">Germany</td>
                             </tr>
                             <tr class="k-table-row k-table-alt-row k-alt k-master-row">
-                                <td class="k-drag-cell">
+                                <td class="k-table-td k-drag-cell">
                                     <span class="k-icon k-i-reorder"></span>
                                 </td>
                                 <td class="k-table-td">Ana Trujillo Emparedados y helados</td>
