--- a/packages/html/src/combobox/tests/combobox-opened.html
+++ b/packages/html/src/combobox/tests/combobox-opened.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="k-no-animations">
 <head>
-    <title>Popup -- Dropdowngrid</title>
+    <title>ComboBox Opened</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" data-role="kendo-theme" href="/packages/default/dist/all.css"/>
     <link rel="stylesheet" href="/packages/html/assets/styles.css"/>
     <script src="/packages/html/assets/scripts.js"></script>
 </head>
 <body id="app" class="k-body">
-    <script src="/packages/html/dist/popup/tests/popup-dropdowngrid.js"></script>
+    <script src="/packages/html/dist/combobox/tests/combobox-opened.js"></script>
 </body>
 </html>
