--- a/packages/html/src/form/tests/form-field-inputs-rtl.html
+++ b/packages/html/src/form/tests/form-field-inputs-rtl.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" class="k-no-animations">
 <head>
-    <title>Kendo React Form Misc</title>
+    <title>FormField Inputs RTL</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" data-role="kendo-theme" href="/packages/default/dist/all.css"/>
     <link rel="stylesheet" href="/packages/html/assets/styles.css"/>
     <script src="/packages/html/assets/scripts.js"></script>
 </head>
 <body id="app" class="k-body">
-    <script src="/packages/html/dist/form/tests/form-misc-react.js"></script>
+    <script src="/packages/html/dist/form/tests/form-field-inputs-rtl.js"></script>
 </body>
 </html>
