test(button): update tests

--- a/tests/button/button-link.html
+++ b/tests/button/button-link.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" data-role="kendo-theme" href="/packages/default/dist/all.css">
-    <link rel="stylesheet" href="./styles.css">
-    <script src="./scripts.js"></script>
+    <link rel="stylesheet" href="/packages/html/dist/button/tests/button-link/styles.css">
+    <script src="/packages/html/dist/button/tests/button-link/scripts.js"></script>
 </head>
 <body id="app" class="k-body">
     <style>
@@ -366,10 +366,5 @@
             </button>
         </span>
     </div>
-    <script>
-        // Live-reload?
-        new EventSource("/esbuild").addEventListener("change", () => location.reload());
-
-    </script>
 </body>
 </html>
