--- a/packages/html/shared/index.html
+++ b/packages/html/shared/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="k-no-animations">
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <meta charset="utf-8" />
         <link rel="stylesheet" data-role="kendo-theme" href="/packages/default/dist/all.css" />
         <link rel="stylesheet" href="/packages/html/assets/styles.css"/>
         <script src="/packages/html/assets/scripts.js"></script>
