chore: render tests html

--- a/tests/slider/slider-css-vars.html
+++ b/tests/slider/slider-css-vars.html
@@ -25,7 +25,7 @@
         }
 
     </style>
-    <div id="test-area" class="k-d-grid k-grid-cols-4">
+    <div id="test-area" class="k-d-grid k-grid-cols-4 k-bg-gray-50">
         <span>Single</span>
         <span>Range</span>
         <span>Single RTL</span>
