--- a/tests/slider/slider.html
+++ b/tests/slider/slider.html
@@ -27,7 +27,7 @@
         }
 
     </style>
-    <div id="test-area" class="k-d-grid">
+    <div id="test-area" class="k-d-grid k-bg-gray-50">
         <span></span>
         <span>Empty</span>
         <span>Not Empty</span>
