--- a/tests/stepper/stepper-horizontal-rtl.html
+++ b/tests/stepper/stepper-horizontal-rtl.html
@@ -32,7 +32,7 @@
         }
 
     </style>
-    <div id="test-area" class="k-d-grid">
+    <div id="test-area" class="k-d-grid k-bg-gray-100">
         <span class="col-2">RTL</span>
         <span>Indicator</span>
         <section>
