--- a/tests/stepper/stepper-states.html
+++ b/tests/stepper/stepper-states.html
@@ -23,7 +23,7 @@
         }
 
     </style>
-    <div id="test-area" class="k-d-grid">
+    <div id="test-area" class="k-d-grid k-bg-gray-100">
         <span>Default</span>
         <section class="col-4">
             <nav class="k-stepper k-widget" style="display: grid; grid-template-columns: repeat(6, 1fr);">
