--- a/tests/stepper/stepper-vertical.html
+++ b/tests/stepper/stepper-vertical.html
@@ -21,7 +21,7 @@
         }
 
     </style>
-    <div id="test-area" class="k-d-grid k-grid-cols-4">
+    <div id="test-area" class="k-d-grid k-grid-cols-4 k-bg-gray-100">
         <span>Indicator</span>
         <span>Indicator + label</span>
         <span>Icon</span>
